kubernetes-networks/canary/manifest/test-rest-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-rest-new
spec:
  selector:
    matchLabels:
      app: test-rest-new
  template:
    metadata:
      labels:
        app: test-rest-new
    spec:
      containers:
      - name: web
        image: soaron/test-rest:0.2
        ports:
          - containerPort: 8000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: test-rest-svc-new
spec:
  selector:
    app: test-rest-new
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
