kubernetes-networks/canary/manifest/test-rest-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-rest-svc
spec:
  selector:
    app: test-rest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
