kubernetes-networks/canary/manifest/test-rest-ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
  name: test-rest
  namespace: test-canary
spec:
  rules:
    - host: ingress.example.com
      http:
        paths:
          - backend:
              serviceName: test-rest-svc
              servicePort: 80
            path: /test
